--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,25 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+  <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>-->
+
+  <script
+    src="http://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
+  <!--<script>
+    $(document).ready(function(){
+      $('#newTodoSubmitBtn').click(function(){
+        console.log('clicked');
+        $('#newTodo').modal('hide');
+      });
+    })
+
+  </script>-->
+
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
